syntax = "proto3";
package user;
option go_package = "gateway/proto/user;user";

message GetProfileRequest {
  int64 id = 1;
}
message GetProfileResponse {
  string first_name = 1;
  string last_name = 2;
}